// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSwitch default 1`] = `
.c2 {
  background: #FFFFFF;
  border-radius: 50%;
  bottom: 0.125rem;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  -webkit-transition: 300ms;
  transition: 300ms;
  width: 1rem;
}

.c1 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: #C1C6CC;
  border-radius: 1.25rem;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  vertical-align: middle;
  width: 2.1875rem;
}

.c0 input {
  cursor: pointer;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c0 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(122,85,227,0.4);
}

<div
  className="c0"
>
  <input
    role="switch"
    type="checkbox"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`ToggleSwitch on set to false 1`] = `
.c2 {
  background: #FFFFFF;
  border-radius: 50%;
  bottom: 0.125rem;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  -webkit-transition: 300ms;
  transition: 300ms;
  width: 1rem;
}

.c1 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: #C1C6CC;
  border-radius: 1.25rem;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  vertical-align: middle;
  width: 2.1875rem;
}

.c0 input {
  cursor: pointer;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c0 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(122,85,227,0.4);
}

<div
  className="c0"
>
  <input
    aria-checked={false}
    checked={false}
    role="switch"
    type="checkbox"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`ToggleSwitch on set to true 1`] = `
.c2 {
  background: #FFFFFF;
  border-radius: 50%;
  bottom: 0.125rem;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
  width: 1rem;
}

.c1 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: #6C43E0;
  border-radius: 1.25rem;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  vertical-align: middle;
  width: 2.1875rem;
}

.c0 input {
  cursor: pointer;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c0 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(122,85,227,0.4);
}

<div
  className="c0"
>
  <input
    aria-checked={true}
    checked={true}
    role="switch"
    type="checkbox"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`ToggleSwitch that is disabled 1`] = `
.c2 {
  background: #FFFFFF;
  border-radius: 50%;
  bottom: 0.125rem;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
  width: 1rem;
}

.c1 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: #6C43E0;
  border-radius: 1.25rem;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c1:hover {
  box-shadow: 0 0 0.01rem 0.01rem rgba(122,85,227,0.5);
}

.c3 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: #C1C6CC;
  border-radius: 1.25rem;
  bottom: 0;
  left: 0;
  opacity: 0.4;
  position: absolute;
  right: 0;
  top: 0;
}

.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  vertical-align: middle;
  width: 2.1875rem;
}

.c0 input {
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c0 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(122,85,227,0.4);
}

<div
  className="c0"
>
  <input
    aria-checked={true}
    checked={true}
    disabled={true}
    role="switch"
    type="checkbox"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c3"
  />
</div>
`;
